...
            android:textColor="#fff"
            android:text="Sign In"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/EmailValue"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="Email"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/PassValue"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="Password"
            android:inputType="textPassword"
...
            android:paddingLeft="10dp"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnSignValue"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/round_corner_buttom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="sign in"
            android:textColor="#777" />

        <TextView
            android:id="@+id/Overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
