<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="bottom"
    android:paddingLeft="15dp"
    android:paddingBottom="15dp">

    <ImageView
        android:id="@+id/nav_image"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginBottom="15dp"
        app:srcCompat="@drawable/ic_user" />

    <TextView
        android:id="@+id/nav_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nav_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/nav_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No group selected"
        android:textColor="#FFFFFF" />

</LinearLayout>